# sockets

./: .gitignore  CMakeLists.txt  README.md  client.c  server.c
lib/net/http/: constants.hpp  event_loop.cpp  event_loop.hpp  event_loop_linux.cpp  event_loop_win.cpp  parser.cpp  parser.hpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
lib/net/socket/: socket.cpp  socket.hpp
src/: main.cpp
tests/: main.cpp
tests/http/: parser_chunked_tests.cpp  parser_content_length_tests.cpp  parser_keep_alive_tests.cpp
tests/support/: test_utils.hpp
